--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,12 @@
 <% include ./partials/header.ejs %>
 <div class="container">
 <h1>Welcome to the Login page</h1>
+<div class="form-group">
 <form action="/login" method="POST">
-    <input type="text" name="username" placeholder="enter the username...">
-    <input type="password" name="password" placeholder="enter the password...">
+    <input type="text" name="username" class="form-control" placeholder="enter the username...">
+    <input type="password" name="password" class="form-control" placeholder="enter the password...">
     <button>Submit</button>
 </form>
+</div>
 </div>
 <% include ./partials/footer.ejs %>
