--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -12,7 +12,7 @@
     <% camp.forEach(function(a) { %>
     <div class="col-md-4 col-sm-6">
         <div class="thumbnail">
-        <img src="<%= a.img %>">
+        <img src="<%= a.img %>" style="width:400px;height:200px">
         <div class="caption">
              <h4><%= a.name %></h4>
         </div>
