--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -9,6 +9,10 @@
          <label>Enter Image Url</label>
           <input type="text" name="image" class="form-control" placeholder="image name...">
       </div>
+      <div class="form-group">
+         <label>Enter Price</label>
+          <input type="text" name="price" class="form-control" placeholder="price...">
+      </div>
        <div class="form-group">
          <label>Enter Description</label>
           <input type="text" name="description" class="form-control" placeholder="description">
