--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <p class="lead">Yelp Camp</p>
+            <p class="lead">GoXplore</p>
             <div class="list-group">
                 <li class="list-group-item active">Info 1</li>
                 <li class="list-group-item">Info 2</li>
@@ -11,9 +11,9 @@
         </div>
         <div class="col-md-9">
             <div class ="thumbnail">
-                <img class="img-responsive" src="<%= campground.img %>" style="width:300px;height:300px">
+                <img class="img-responsive" src="<%= campground.img %>">
                 <div class="caption-full">
-                    <h4 class="pull-right">$9.99 day/night</h4>
+                    <h4 class="pull-right"><%=campground.price%>day/night</h4>
                     <h4><a><%= campground.name %></a></h4>
                     <p><%= campground.description %></p>
                     <p><em>Submitted by <%=campground.author.username%></em></p>
