--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,16 @@
 <% include ./partials/header.ejs %>
 <div class="container">
-<h1>Welcome to the Login page</h1>
-<div class="form-group">
+<div class="form-group" style="width:30%;margin:25px auto">
 <form action="/login" method="POST">
-    <input type="text" name="username" class="form-control" placeholder="enter the username...">
-    <input type="password" name="password" class="form-control" placeholder="enter the password...">
-    <button>Submit</button>
+    <div class="form-group">
+    <label>Username</label>
+    <input type="text" name="username" class="form-control" required placeholder="enter the username...">
+    <div>
+        <div class="form-group">
+    <label>Password</label>
+    <input type="password" name="password" class="form-control" required placeholder="enter the password...">
+    </div>
+    <button class="btn btn-primary">Submit</button>
 </form>
 </div>
 </div>
