--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>YelpCamp</title>
+        <title>GoXplore</title>
         <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel = "stylesheet" type="text/css" href="/stylesheets/app.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     </head>
     <body>
-    <div class="nav navbar-default">
+    <div class="nav navbar-inverse">
        <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Yelp Camp</a>
+            <a class="navbar-brand" href="/">GoXplore</a>
         </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
